tests/error/poly_errors_py312/variadic1.py
from guppylang.decorator import guppy


@guppy
def main[*Ts]() -> None:
    ...


guppy.compile(main)
